# mtg

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  todo.txt
dbt_project/: dbt_project.yml
dbt_project/models/: sources.yml
dbt_project/models/staging/: mtg_prices.sql
dbt_project/models/sub_sets/: card_names_prices_finishes.sql  daily_card_prices.sql
mtg/: definitions.py  project.py
mtg/assets/: 3dgraph.py  api_call_store.py
mtg_src/: definitions.py  project.py
mtg_src/assets/: mtg_prices_by_sets.py
mtg_tests/: test_db.py
src/: create_valid_db.py
src/dbt_project/models/sub_sets/: avg_price_of_cards.sql  card_names_prices_finishes.sql
src/mtg_src/: definitions.py  project.py
src/mtg_src/assets/: api_call_store.py
src/mtg_src/test/: test_db.py
